# rio-tiler

./: .bumpversion.cfg  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.txt  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  index.html  index.md  iterable_example.ipynb  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py  sitemap.xml  test.npy  test.npz  tox.ini  versions.json
.circleci/: config.yml
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml  release.yml
9.0.6/: 404.html  index.html  objects.inv  sitemap.xml
9.0.6/colormap/: index.html
9.0.6/contributing/: index.html
9.0.6/experimental/: index.html
9.0.6/intro/: index.html
9.0.6/models/: index.html
9.0.6/mosaic/: index.html
9.0.6/readers/: index.html
9.0.6/release-notes/: index.html
9.0.6/search/: search_index.json
9.0.6/supported_format/: index.html
9.1.0/: 404.html  index.html  sitemap.xml
9.1.0/colormap/: index.html
9.1.0/contributing/: index.html
9.1.0/experimental/: index.html
9.1.0/intro/: index.html
9.1.0/models/: index.html
9.1.0/mosaic/: index.html
9.1.0/readers/: index.html
9.1.0/release-notes/: index.html
9.1.0/supported_format/: index.html
9.1.1/: 404.html  index.html  sitemap.xml
9.1.1/colormap/: index.html
9.1.1/contributing/: index.html
9.1.1/experimental/: index.html
9.1.1/intro/: index.html
9.1.1/models/: index.html
9.1.1/mosaic/: index.html
9.1.1/readers/: index.html
9.1.1/release-notes/: index.html
9.1.1/supported_format/: index.html
9.2.0/: 404.html  index.html  sitemap.xml
9.2.0/colormap/: index.html
9.2.0/contributing/: index.html
9.2.0/experimental/: index.html
9.2.0/intro/: index.html
9.2.0/models/: index.html
9.2.0/mosaic/: index.html
9.2.0/readers/: index.html
9.2.0/release-notes/: index.html
9.2.0/search/: search_index.json
9.2.0/supported_format/: index.html
9.2.1/: 404.html  index.html  sitemap.xml
9.2.1/colormap/: index.html
9.2.1/contributing/: index.html
9.2.1/experimental/: index.html
9.2.1/intro/: index.html
9.2.1/models/: index.html
9.2.1/mosaic/: index.html
9.2.1/readers/: index.html
9.2.1/release-notes/: index.html
9.2.1/search/: search_index.json
9.2.1/supported_format/: index.html
9.3.0/: 404.html  index.html  sitemap.xml
9.3.0/colormap/: index.html
9.3.0/contributing/: index.html
9.3.0/experimental/: index.html
9.3.0/intro/: index.html
9.3.0/models/: index.html
9.3.0/mosaic/: index.html
9.3.0/readers/: index.html
9.3.0/release-notes/: index.html
9.3.0/supported_format/: index.html
9.4.0/: 404.html  index.html  sitemap.xml
9.4.0/colormap/: index.html
9.4.0/contributing/: index.html
9.4.0/experimental/: index.html
9.4.0/intro/: index.html
9.4.0/models/: index.html
9.4.0/mosaic/: index.html
9.4.0/readers/: index.html
9.4.0/release-notes/: index.html
9.4.0/supported_format/: index.html
9.4.1/: 404.html  index.html  objects.inv  sitemap.xml
9.4.1/colormap/: index.html
9.4.1/contributing/: index.html
9.4.1/experimental/: index.html
9.4.1/intro/: index.html
9.4.1/models/: index.html
9.4.1/mosaic/: index.html
9.4.1/readers/: index.html
9.4.1/release-notes/: index.html
9.4.1/search/: search_index.json
9.4.1/supported_format/: index.html
9.4.2/: 404.html  index.html  sitemap.xml
9.4.2/colormap/: index.html
9.4.2/contributing/: index.html
9.4.2/experimental/: index.html
9.4.2/intro/: index.html
9.4.2/models/: index.html
9.4.2/mosaic/: index.html
9.4.2/readers/: index.html
9.4.2/release-notes/: index.html
9.4.2/search/: search_index.json
9.4.2/supported_format/: index.html
Notebook/: Using-rio-tiler-mosaic.ipynb
advanced/: benchmark.html
advanced/custom_readers/: custom_readers.md  index.html
advanced/dynamic_tiler/: index.html
advanced/feature/: index.html
advanced/mosaic_backend/: index.html
advanced/statistics/: index.html
advanced/tms/: index.html  tms.md
colormap/: index.html
contributing/: contributing.md  index.html
dev/benchmarks/: data.js
docs/: colormap.md  dynamic_tiler.md  intro.md  mkdocs.yml  models.md  mosaic.md  readers.md  supported_format.md  v2_migration.md  v3_migration.md
docs/advanced/: custom_readers.md  dynamic_tiler.md  feature.md  multi_assets.md  tms.md
docs/examples/: Using-nonEarth-dataset.ipynb  Using-rio-tiler-STACReader.ipynb  Using-rio-tiler-mosaic.ipynb  Using-rio-tiler.ipynb  Using-tms.ipynb
docs/pdocs_templates/: text.mako
experimental/: index.html
intro/: index.html  intro.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
models/: index.html
mosaic/: index.html
notebooks/: imos-sst.ipynb
plans/: async_zarr_reader.md  expression_security_hardening.md  warp_two_step_pipeline.md
readers/: index.html  readers.md
release-notes/: index.html  release-notes.md
rio_tiler/: __init__.py  _warp.py  aws.py  cbers.py  colormap.py  constants.py  errors.py  expression.py  landsat8.py  logger.py  main.py  mercator.py  models.py  profiles.py  reader.py  sentinel1.py  sentinel2.py  tasks.py  tms.py  types.py  utils.py  web.py
search/: search_index.json
supported_format/: index.html  supported_format.md
tests/: __init__.py  conftest.py  test_async.py  test_async_geotiff.py  test_async_geozarr.py  test_async_stac.py  test_async_zarr.py  test_aws.py  test_cbers.py  test_cmap.py  test_expression.py  test_geoxarray.py  test_io_MultiBand.py  test_io_async.py  test_io_cbers.py  test_io_cogeo.py  test_io_image.py  test_io_landsat.py  test_io_rasterio.py  test_io_sentinel1.py  test_io_sentinel2.py  test_io_stac.py  test_io_vsifile.py  test_io_xarray.py  test_io_zarr.py  test_landsat.py  test_main.py  test_mask.py  test_mercator.py  test_models.py  test_mosaic.py  test_mosaic_backend.py  test_overview.py  test_profiles.py  test_reader.py  test_resampling.py  test_sentinel.py  test_sentinel1.py  test_sentinel2.py  test_tasks.py  (+3 more)
webmap/: .prettierrc  package-lock.json  package.json
(+1014 files in other folders)
